Yacc/PRUEBA0/y.output
Grammar

    0 $accept: str1 $end

    1 str1: str2 nl

    2 str2: CERO str2 UNO
    3     | CERO UNO

    4 nl: NL


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    UNO (258) 2 3
    CERO (259) 2 3
    NL (260) 4


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    str1 (7)
        on left: 1
        on right: 0
    str2 (8)
        on left: 2 3
        on right: 1 2
    nl (9)
        on left: 4
        on right: 1


State 0

    0 $accept: . str1 $end

    CERO  shift, and go to state 1

    str1  go to state 2
    str2  go to state 3


State 1

    2 str2: CERO . str2 UNO
    3     | CERO . UNO

    UNO   shift, and go to state 4
    CERO  shift, and go to state 1

    str2  go to state 5


State 2

    0 $accept: str1 . $end

    $end  shift, and go to state 6


State 3

    1 str1: str2 . nl

    NL  shift, and go to state 7

    nl  go to state 8


State 4

    3 str2: CERO UNO .

    $default  reduce using rule 3 (str2)


State 5

    2 str2: CERO str2 . UNO

    UNO  shift, and go to state 9


State 6

    0 $accept: str1 $end .

    $default  accept


State 7

    4 nl: NL .

    $default  reduce using rule 4 (nl)


State 8

    1 str1: str2 nl .

    $default  reduce using rule 1 (str1)


State 9

    2 str2: CERO str2 UNO .

    $default  reduce using rule 2 (str2)
